# sharons_app

./: Dockerfile  LICENSE  auctions.json  sharons-app.cabal  stack.yaml
app/: Main.hs
src/: Auction.hs  Battle.hs  GMail.hs  ListMap.hs  Main.hs  Secrets.hs  Tests.hs
test/: .BattleTest.hs.swp  .Main.hs.swp  BattleTest.hs  Main.hs
