name:                sharons-app
version:             0.1.0.0
synopsis:            Simple project template from stack
homepage:            https://github.com/rifung/sharons-app#readme
license:             MIT
license-file:        LICENSE
author:              Richard Fung
maintainer:          minesasecret@gmail.com
copyright:           2017 Google
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable sharons-app
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , snap
                     , heist >= 1.0 && < 1.1
