Name:                sharons-app
Version:             0.1
License:             MIT
Author:              Richard Fung
Maintainer:          minesasecret@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable sharons-app
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    monad-control             >= 1.0   && < 1.1,
    mtl                       >= 2     && < 3,
    snap-core                 >= 1.0   && < 1.1,
    snap-server               >= 1.0   && < 1.1,
    req                       >= 0.1.0

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
