Name:                sharons-app
Version:             0.1
License:             MIT
Author:              Richard Fung
Maintainer:          minesasecret@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8

library
  hs-source-dirs:             src
  exposed-modules:            Auction
                            , Battle
                            , GMail
                            , ListMap
  other-modules:              Secrets
  build-depends:
    base                      >= 4     && < 5,
    aeson                     >= 0.11.2 && < 0.12.0,
    bytestring                >= 0.9.1 && < 0.11,
    containers,
    mime-mail,
    monad-control             >= 1.0   && < 1.1,
    mtl                       >= 2     && < 3,
    req                       >= 0.1.0 && < 0.2.0,
    smtps-gmail               >= 1.3.2 && < 1.4,
    text                      >= 1.2.2 && < 1.3.0

executable sharons-exe
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    base                      >= 4     && < 5,
    containers,
    sharons-app
  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-unused-do-bind

test-suite sharons-test
  type: exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:    BattleTest
  build-depends:
    base                      >= 4 && < 5,
    aeson                     >= 0.11.2 && < 0.12.0,
    bytestring                >= 0.9.1 && < 0.11,
    containers,
    HUnit                     >= 1.3 && < 1.4,
    sharons-app
  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-unused-do-bind
